--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>askdata-web</title>
+    <title>DataMind - AI-Powered Data Analysis</title>
+    <meta name="description" content="DataMind: Intelligent chat interface for analyzing your Google Sheets data using AI. Get insights and answers through natural language queries." />
+    <meta name="keywords" content="AI, data analysis, Google Sheets, chat interface, business intelligence" />
+    <meta name="author" content="Erik Tamayo" />
   </head>
   <body>
     <div id="root"></div>
